// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`rendered-markup snapshots > edit mode — roving tabindex, data-coords, aria-current, editor seam 1`] = `
<div
  class="finsheet"
>
  <table
    class="finsheet-table"
  >
    <colgroup>
      <col
        style="width: 20ch;"
      />
      <col
        style="width: 110px;"
      />
      <col />
      <col />
    </colgroup>
    <thead>
      <tr>
        <th
          class="is-sticky"
          data-align="left"
          scope="col"
        />
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Actual
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Budget
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Δ
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-kind="section"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Revenue
        </th>
        <td
          colspan="3"
        />
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Product
        </th>
        <td
          aria-current="true"
          class="is-num"
          data-align="right"
          data-fs-col="1"
          data-fs-row="1"
          tabindex="0"
        >
          1,000
        </td>
        <td
          class="is-num"
          data-align="right"
          data-fs-col="2"
          data-fs-row="1"
          tabindex="-1"
        >
          950
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          50
        </td>
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Services
        </th>
        <td
          class="is-num"
          data-align="right"
          data-fs-col="1"
          data-fs-row="2"
          tabindex="-1"
        >
          240
        </td>
        <td
          class="is-num"
          data-align="right"
          data-fs-col="2"
          data-fs-row="2"
          tabindex="-1"
        >
          –
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (10)
        </td>
      </tr>
      <tr
        data-kind="subtotal"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Total revenue
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          1,240
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          1,200
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          40
        </td>
      </tr>
      <tr
        aria-hidden="true"
        data-kind="spacer"
      >
        <td
          class="is-sticky"
        />
        <td
          colspan="3"
        />
      </tr>
    </tbody>
    <tfoot>
      <tr
        data-kind="total"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Net income
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          (1,234)
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          217
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (1,451)
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`rendered-markup snapshots > mixed per-column formats — $ / € currency + % margin (Epic 9) 1`] = `
<div
  class="finsheet"
>
  <table
    class="finsheet-table"
  >
    <caption>
      Mixed formats
    </caption>
    <colgroup>
      <col
        style="width: 20ch;"
      />
      <col />
      <col />
      <col />
    </colgroup>
    <thead>
      <tr>
        <th
          class="is-sticky"
          data-align="left"
          scope="col"
        />
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Revenue
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Cost
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Margin
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-kind="section"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Revenue
        </th>
        <td
          colspan="3"
        />
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Product
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          $1,000
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (€600)
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          40.0%
        </td>
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Services
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          $240
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (€90)
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          62.5%
        </td>
      </tr>
    </tbody>
    <tfoot>
      <tr
        data-kind="total"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Total
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          $1,240
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (€690)
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          44.4%
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;

exports[`rendered-markup snapshots > thousands scale + inline (non-sticky) trailing total 1`] = `
<div
  class="finsheet"
>
  <table
    class="finsheet-table"
  >
    <colgroup>
      <col
        style="width: 20ch;"
      />
      <col
        style="width: 110px;"
      />
      <col />
      <col />
    </colgroup>
    <thead>
      <tr>
        <th
          class="is-sticky"
          data-align="left"
          scope="col"
        />
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Actual
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Budget
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Δ
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-kind="section"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Revenue
        </th>
        <td
          colspan="3"
        />
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Product
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          1
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          1
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          0
        </td>
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Services
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          0
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          –
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          0
        </td>
      </tr>
      <tr
        data-kind="subtotal"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Total revenue
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          1
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          1
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          0
        </td>
      </tr>
      <tr
        aria-hidden="true"
        data-kind="spacer"
      >
        <td
          class="is-sticky"
        />
        <td
          colspan="3"
        />
      </tr>
      <tr
        data-kind="total"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Net income
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          (1)
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          0
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (1)
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`rendered-markup snapshots > view mode — the full read-only statement 1`] = `
<div
  class="finsheet"
>
  <table
    class="finsheet-table"
  >
    <caption>
      Income statement
    </caption>
    <colgroup>
      <col
        style="width: 20ch;"
      />
      <col
        style="width: 110px;"
      />
      <col />
      <col />
    </colgroup>
    <thead>
      <tr>
        <th
          class="is-sticky"
          data-align="left"
          scope="col"
        />
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Actual
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Budget
        </th>
        <th
          class="is-num"
          data-align="right"
          scope="col"
        >
          Δ
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        data-kind="section"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Revenue
        </th>
        <td
          colspan="3"
        />
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Product
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          1,000
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          950
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          50
        </td>
      </tr>
      <tr
        data-kind="line"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 1;"
        >
          Services
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          240
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          –
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (10)
        </td>
      </tr>
      <tr
        data-kind="subtotal"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Total revenue
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          1,240
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          1,200
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          40
        </td>
      </tr>
      <tr
        aria-hidden="true"
        data-kind="spacer"
      >
        <td
          class="is-sticky"
        />
        <td
          colspan="3"
        />
      </tr>
    </tbody>
    <tfoot>
      <tr
        data-kind="total"
      >
        <th
          class="is-sticky"
          data-align="left"
          scope="row"
          style="--fs-depth: 0;"
        >
          Net income
        </th>
        <td
          class="is-num"
          data-align="right"
        >
          (1,234)
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          217
        </td>
        <td
          class="is-num"
          data-align="right"
        >
          (1,451)
        </td>
      </tr>
    </tfoot>
  </table>
</div>
`;
